<resources>
    <string name="app_name">ScrollView</string>
    <string name="title">Harry Potter</string>
    <string name="sub1">Chapter 1</string>
    <string name="sub2">Chapter 2</string>
    <string name="sub3">Chapter 3</string>
    <string name="sub4">Chapter 4</string>
    <string name="sub5">Chapter 5</string>
    <string name="lorem1">Lorem ipsum dolor sit amet hac nunc cursus lacus sed letius. Facilisis dui tempor pede a tincidunt mi volutpat scelerisque. Tristique amet ultrices imperdiet finibus viverra commodo quam tempor sociosqu. Tempus nunc odio dis tortor libero habitasse pharetra dui. Imperdiet erat maximus himenaeos aliquet urna metus nibh. Dui placerat luctus id nostra arcu neque ipsum aliquam sodales orci.\n\n

Faucibus integer fames placerat nulla porttitor class ex. Curae placerat interdum mi dolor pede iaculis class. Inceptos mauris imperdiet at pharetra diam leo. Quis pellentesque odio orci justo gravida at blandit finibus. Turpis quam ad letius neque elementum accumsan aliquet imperdiet arcu felis conubia. Mattis sapien curabitur primis facilisis diam. Id cursus malesuada suscipit sagittis proin quam commodo arcu semper molestie.\n\n

Letius quam semper aliquet iaculis ridiculus. Rutrum interdum blandit bibendum quisque consectetuer parturient eget tortor. Lectus mollis ut mauris maecenas urna blandit ullamcorper habitasse ultricies taciti aliquet. Hac aenean adipiscing placerat dolor ante ad ipsum. Elit blandit hac si nulla dapibus ex vehicula. Nam in ac ut tellus interdum finibus odio euismod. Quisque tincidunt sollicitudin dapibus arcu faucibus est porta orci si.</string>

    <string name="lorem2">Hendrerit arcu tellus condimentum ullamcorper lobortis ridiculus porta. Pulvinar consequat magnis aliquet sapien netus tellus natoque sed proin. Taciti sed turpis etiam proin vulputate magnis nulla. Nullam accumsan turpis morbi primis scelerisque urna class rhoncus ultrices iaculis. Maximus consectetuer magna mattis erat est litora ex et facilisi. Sociosqu pharetra lobortis natoque fringilla senectus sagittis posuere tempor litora at dapibus. Laoreet euismod accumsan quam feugiat morbi at dis curae id mauris magnis. Gravida risus porta laoreet letius taciti.\n\n

Quam sed massa et ligula nulla maecenas class duis vulputate dui quis. Luctus vehicula ac nisl nostra interdum suspendisse sodales. At porttitor montes nulla posuere potenti tristique letius lacinia urna interdum. Dolor amet aliquet orci consequat ultricies sem ex.\n\n

Nec cursus sagittis etiam nam consectetuer justo. Magna quisque dictum aliquam quam pede amet nascetur conubia bibendum ultricies. Si cursus morbi pulvinar cubilia elementum dolor letius iaculis lectus. Posuere lobortis rhoncus tempus vulputate velit hac nulla inceptos tristique nostra litora. Ridiculus pellentesque natoque aliquam congue sit velit elit.</string>

    <string name="lorem3">Quisque eleifend scelerisque lorem, eu varius magna ornare a. Nunc sit amet volutpat velit, non eleifend augue. Fusce at molestie est. Nullam nec fermentum sem. Aenean in porta erat. Aliquam suscipit, nulla eget pellentesque luctus, leo quam dapibus leo, sed facilisis justo sapien sit amet nulla. Quisque tincidunt lorem at mauris sollicitudin, ut dignissim massa cursus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla nec efficitur sem, a accumsan purus. Maecenas porttitor elit at erat accumsan porta. Nullam pretium lectus sit amet dui tempus, et laoreet libero lacinia.\n\n

Proin convallis id lorem quis elementum. Quisque neque tortor, sollicitudin id eros ac, mattis dapibus purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent scelerisque aliquet quam, vel porta purus. Morbi viverra, mi ut semper ornare, lectus risus iaculis orci, sed venenatis urna lectus quis orci. Ut eleifend metus id augue mattis lacinia. Morbi quis augue at tortor blandit fringilla quis eget turpis. Praesent at sollicitudin felis, ut finibus nisi. Morbi auctor sed nulla in pulvinar. Donec iaculis nibh id diam porttitor malesuada. Suspendisse potenti. Vivamus libero libero, volutpat nec purus quis, fringilla pretium diam.\n\n

Suspendisse ligula purus, fringilla eu luctus ut, placerat in risus. Morbi quis porta augue. Praesent elit enim, tincidunt a est sit amet, rhoncus facilisis tellus. Nam fringilla laoreet orci. Pellentesque varius id mauris a rutrum. Fusce sed lacus eget arcu lobortis posuere. Sed eu ligula magna. Pellentesque finibus nulla at sem tincidunt tristique. In congue eros quis rutrum eleifend. Cras congue suscipit suscipit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur sed metus tempus turpis dictum efficitur. Etiam mollis, augue mollis rhoncus eleifend, metus nibh dignissim mi, id feugiat ligula elit a mauris. Nunc gravida lacus augue, rhoncus malesuada nunc imperdiet at.</string>

    <string name="lorem4">Nam sodales pellentesque tellus, vel laoreet augue imperdiet non. Integer sed pharetra nunc, vitae interdum ex. Maecenas vitae ante dui. Phasellus purus elit, egestas sit amet ante eu, aliquam pretium purus. Fusce felis quam, ultricies vitae risus sit amet, tempus ullamcorper leo. Nulla sed est a felis sodales sodales. Curabitur in faucibus tellus. Morbi ullamcorper sagittis est et eleifend. Phasellus ultrices enim elit, non imperdiet dolor accumsan non.\n\n

Curabitur efficitur turpis sit amet arcu malesuada porta. Donec in nunc eget magna mollis vehicula. Nunc interdum justo commodo, fringilla felis eget, tempor metus. Duis cursus efficitur dictum. Praesent dapibus ipsum at nisi blandit vehicula. Pellentesque tortor lectus, porta ut posuere quis, auctor non dolor. Duis laoreet nunc ut erat hendrerit hendrerit. Maecenas blandit lacinia vestibulum. Integer et justo ac libero auctor aliquet sed eget metus. Pellentesque eget urna sodales, ultricies elit vitae, sagittis tellus. Duis et purus scelerisque, maximus neque nec, consequat odio. Sed imperdiet massa eget massa ornare facilisis. Quisque volutpat molestie maximus. In hac habitasse platea dictumst. Nunc sed porta diam, vel lacinia libero.\n\n

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultrices sed nunc vitae ornare. Aliquam porta eget nulla vel egestas. Nulla ex risus, imperdiet at enim ac, gravida cursus arcu. Fusce tincidunt neque sagittis turpis tincidunt, dapibus semper magna rutrum. Ut elementum velit sed metus commodo, a lacinia nunc molestie. Aenean non arcu elementum, cursus dui eu, ultricies nisl. Fusce quis sapien diam. Nunc sit amet odio vitae nunc aliquam pharetra. Cras euismod ultricies convallis. Mauris nisl libero, sollicitudin vitae ultricies nec, aliquet pretium lectus.</string>

    <string name="lorem5">Quisque odio nibh, porttitor nec feugiat ut, facilisis eu mi. Cras ligula lacus, convallis in arcu eu, vestibulum dignissim metus. Curabitur pretium ipsum facilisis urna ultrices ullamcorper. Nullam nunc mi, volutpat et justo eu, porta sagittis justo. Proin elementum nibh quis suscipit venenatis. Fusce placerat sem eget quam tristique, ullamcorper tempor ex congue. Nullam ut odio quam.\n\n

Sed non nunc tristique sapien congue vulputate et id lectus. Mauris et nunc sit amet justo viverra mollis. Vivamus dolor ante, tincidunt et lectus rutrum, venenatis scelerisque dui. Etiam nec luctus enim. Etiam lectus eros, tincidunt ac fermentum quis, viverra a ante. Vivamus id neque congue, tempor ante quis, ultricies leo. Nunc dignissim auctor arcu vel molestie. In et sagittis enim, ac posuere elit. Proin at dui sagittis, volutpat sem ultrices, placerat ipsum. Donec maximus turpis condimentum risus imperdiet, quis aliquet lacus elementum.\n\n

Proin finibus turpis turpis, vitae tincidunt massa molestie at. Praesent elementum elit et dui sagittis, ut pulvinar justo gravida. Donec eleifend velit et magna efficitur, vitae mattis metus elementum. Suspendisse potenti. Fusce eget dui in justo interdum semper. Aliquam erat volutpat. Praesent nec dui sagittis, malesuada dolor vel, ullamcorper enim. In et ornare metus. Suspendisse metus ligula, hendrerit a elit vitae, feugiat placerat libero. Vivamus vel ex ut tortor ullamcorper consectetur vitae sed nibh. Integer volutpat velit dui, eu aliquet orci dignissim et.</string>
</resources>
