<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ig"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_instagram"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:autoLink="web"/>

    <Button
        android:id="@+id/fb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_facebook"
        android:layout_toStartOf="@id/ig"
        android:layout_marginTop="30dp"
        android:autoLink="web"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_scroll"
        android:id="@+id/scroll1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/title"
                android:textColor="@color/darkmode"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_google" />

        </RelativeLayout>

    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/scroll2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/scroll1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button1"
                android:text="@string/sub1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button1"
                android:text="@string/sub2"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button1"
                android:text="@string/sub3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button1"
                android:text="@string/sub4"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button1"
                android:text="@string/sub5"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scroll2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:src="@drawable/harry1" />

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/lorem1"
                android:textSize="16sp"
                android:textColor="@color/darkmode" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>